FEAT: Setup Auth Web (#2)
FEAT: Setup Auth BE & Auth Web
